Fix icon overflowing in navigation

--- a/src/styles/theme/navigation.scss
+++ b/src/styles/theme/navigation.scss
@@ -130,7 +130,7 @@
         align-items: center;
         justify-content: space-between;
 
-        span {
+        span:not(.icon) {
           overflow: hidden;
           text-overflow: ellipsis;
         }
